# PBDxx

./: .gitignore  CMakeLists.txt  README.md
include/PBD++/: element.h  elements.h  exceptions.h  pbd.h  pbdoc.h  pbdoc_head.h  streams.h
include/PBD++/details/: cstdint.h  dynamic_bitset.h  endianess.h  shared_ptr.h  streams_operators.h  string_element_map.h  type_id.h
include/PBD++/elements/: array.h  boolean.h  boolean_array.h  element_array.h  element_implementation.h  element_map.h  integer.h  integer_array.h  null.h  number.h  number_array.h  real.h  real_array.h  string.h  string_array.h
include/PBD++/exceptions/: bad_cast.h  checksum_error.h  duplicate_key.h  invalid_type_id.h  parsing_error.h  size_out_of_range.h
include/pbd/: pbd.h  pbdconf.h  pbddoc.h  pbdxx.h
src/: CMakeLists.txt  element.cpp  pbdoc.cpp  pbdoc_head.cpp  streams.cpp
src/PBD++/: CMakeLists.txt
src/PBD++/details/: type_id.cpp
src/PBD++/elements/: boolean.cpp  element_map.cpp  real.cpp  string.cpp  string_array.cpp
src/PBD++/exceptions/: bad_cast.cpp  checksum_error.cpp  parsing_error.cpp  size_out_of_range.cpp
src/details/: dynamic_bitset.cpp  streams_operators.cpp  type_id.cpp
src/elements/: boolean_array.cpp  element_array.cpp  element_implementation.cpp  element_map.cpp  integer.cpp  integer_array.cpp  null.cpp  real.cpp  real_array.cpp  string.cpp  string_array.cpp
src/exceptions/: checksum_error.cpp  duplicate_key.cpp  invalid_type_id.cpp  parsing_error.cpp  size_out_of_range.cpp
src/pbd/: CMakeLists.txt  arrayutils.c  arrayutils.h  bool.c  bool.h  boolarray.c  boolarray.h  element.c  element.h  elementarray.c  elementarray.h  endianess.c  endianess.h  integer.c  integer.h  integerarray.c  integerarray.h  null.c  null.h  pbdconf.c  pbdconf_internal.h  pbddoc.c  pbdxx.cpp  real.c  real.h  realarray.c  realarray.h  string.c  string.h  typeid.c  typeid.h
test/: CMakeLists.txt  container_element_tests.cpp  dynamic_bitset_tests.cpp  number_array_tests.cpp  pbdoc_tests.cpp  primitive_streams_tests.cpp
test/PBD++/: CMakeLists.txt  single_element_tests.cpp
test/pbd/: CMakeLists.txt  bool_array_tests.c  element_array_tests.c  general_tests.c  number_array_tests.c  pbddoc_tests.c  single_element_tests.c
test/pbdxx/: CMakeLists.txt  boolean_array_tests_xx.cpp  element_array_tests_xx.cpp  number_array_tests_xx.cpp  pbddoc_tests_xx.cpp  single_element_tests_xx.cpp
tests/: CMakeLists.txt  pbdoc_tests.cpp  single_element_tests.cpp
